<resources>
    <string name="app_name">TravellerGuidMobileAndroid</string>
    <string name="title_activity_test">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">votre pseudo</string>
    <string name="password">votre mot de passe</string>
    <string name="prompt_enter_username">Entrez votre pseuso</string>
    <string name="prompt_enter_password">Entre votre mot de passe</string>
    <string name="register">M\'enregistrer</string>
    <string name="create_account">Créer un compte</string>
    <string name="login">S\'authentifier</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
