<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundessai2"
    android:orientation="vertical"
    tools:context=".view.FirstPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|fill_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/baloo"
            android:gravity="bottom|center"
            android:text="@string/title_activity_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <Button
                android:id="@+id/btn_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTintMode="add"
                android:fontFamily="@font/baloo"
                android:text="@string/create_account" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTintMode="add"
                android:fontFamily="@font/baloo"
                android:text="@string/login" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>